--- a/src/modal.css
+++ b/src/modal.css
@@ -64,20 +64,22 @@
 
 #podlinkModalBody {
     position: relative;
-    width: 576px;
+    width: 200px;
     max-width: 100%;
     height: 500px;
     max-height: 80vh;
 }
 
-@media screen and (min-width:30rem) {
+@media screen and (min-width:368px) {
     #podlinkModalBody {
+        width: 368px;
         height: 300px;
     }
 }
 
-@media screen and (min-width:36rem) {
+@media screen and (min-width:536px) {
     #podlinkModalBody {
+        width: 536px;
         height: 220px;
     }
 }
