--- a/src/modal.css
+++ b/src/modal.css
@@ -3,9 +3,17 @@
     border: none;
     border-radius: .25rem;
     background-color: #FFF;
-    width: 100%;
-    max-width: 30rem;
+    width: 26rem;
+    max-width: calc(100vw - 2rem);
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+    --primary: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+    #podlinkModal {
+        background-color: #000;
+        --primary: #FFF;
+    }
 }
 
 /* native backdrop */
@@ -26,27 +34,34 @@
     align-items: center;
     justify-content: space-between;
     margin: 0;
-    padding: 1em;
-    color: #000;
+    color: var(--primary);
 }
 
 #podlinkModalHeader h2 {
     margin: 0;
     font-size: 1.5rem;
+    line-height: 1;
+    padding: 1rem;
 }
 
 #podlinkModalClose {
-    padding: 0;
+    padding: 1rem;
     text-transform: uppercase;
     border: 0;
     background-color: transparent;
     line-height: 1;
-    color: #000;
+    color: var(--primary);
+    border-radius: 0;
+    font-size: 1.5rem;
+}
+
+#podlinkModalClose:focus-visible {
+    outline-color: var(--primary);
 }
 
 #podlinkModalGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     gap: 1rem;
     padding: 1rem;
 }
@@ -54,31 +69,29 @@
 #podlinkModalGrid a {
     display: flex;
     place-items: center;
-    gap: 1rem;
-    color: #000;
+    gap: 0.5rem;
+    color: var(--primary);
     text-decoration: none;
     border-radius: 1rem;
     transition: 0.2s ease;
+    font-size: 1rem;
 }
 
-#podlinkModalGrid a:hover, #podlinkModalGrid a:focus-visible {
-    background: hsla(0,0%,6%,.1);
-    outline: none;
+#podlinkModal a:hover img, #podlinkModal a:focus-visible img {
+    transform: scale(1.125);
+}
+
+#podlinkModal a:focus-visible {
+    outline-color: var(--primary);
+    outline-style: solid;
+    outline-width: .125rem;
+    outline-offset: .25rem;
 }
 
 #podlinkModalGrid a img {
     display: block;
     width: 3rem;
-}
-
-#podlinkModalIframe {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    transition: all 0.3s ease;
 }
 
 @keyframes slide-up {
@@ -90,27 +103,5 @@
     100% {
         transform: translate(0, 0);
         opacity: 1;
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    #podlinkModal {
-        background-color: #000;
-    }
-
-    #podlinkModalHeader {
-        color: #FFF;
-    }
-
-    #podlinkModalClose {
-        color: #FFF;
-    }
-
-    #podlinkModalGrid a {
-        color: #FFF;
-    }
-
-    #podlinkModalGrid a:hover, #podlinkModalGrid a:focus-visible {
-        background: hsla(0,0%,94%,.1);
     }
 }
