--- a/src/embed.css
+++ b/src/embed.css
@@ -98,7 +98,7 @@ label[for="podlinkModalCheckbox"] {
     white-space: nowrap;
 }
 
-#podlinkModal a:hover svg, #podlinkModal a:focus-visible svg {
+#podlinkModal a:hover img, #podlinkModal a:focus-visible img {
     transform: scale(1.125);
 }
 
@@ -109,7 +109,7 @@ label[for="podlinkModalCheckbox"] {
     outline-width: .125rem;
 }
 
-#podlinkModalGrid svg {
+#podlinkModalImage {
     display: block;
     transition: all 0.3s ease;
     width: 3rem;
