--- a/src/embed.css
+++ b/src/embed.css
@@ -79,9 +79,9 @@ label[for="podlinkSwitch"] {
     display: grid;
     flex: 1;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     overflow: scroll;
-    padding: 1rem;
+    padding: 0 1rem;
 }
 
 #podlinkModal a {
