--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
   place-content:center;
   min-height:100vh;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  background-color:#808080;
+  margin: 0;
 }
 
 a {
