--- a/src/embed.css
+++ b/src/embed.css
@@ -65,6 +65,7 @@ label[for="podlinkSwitch"] {
     border-radius: 0;
     border: 0;
     color: var(--primary);
+    cursor: pointer;
     font-size: 1.5rem;
     line-height: 1;
     padding: 1rem;
@@ -81,7 +82,7 @@ label[for="podlinkSwitch"] {
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     overflow: scroll;
-    padding: 0 1rem;
+    padding: .25rem 1rem;
 }
 
 #podlinkModal a {
