--- a/src/embed.css
+++ b/src/embed.css
@@ -7,6 +7,7 @@
     max-width: calc(100vw - 2rem);
     padding: 0;
     width: 26rem;
+    box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: dark) {
